Add SSE events and refine Studio dev setup

--- a/login.html
+++ b/login.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
-    <script>
-      (function () {
-        if (location.pathname.endsWith('/login.html')) {
-          const params = new URLSearchParams(location.search);
-          if (params.get('skipAuth') === '1') {
-            location.replace('/#/?' + params.toString());
-          } else {
-            const qs = params.toString();
-            location.replace('/#/login' + (qs ? '?' + qs : ''));
-          }
-        }
-      })();
-    </script>
+  <!-- MUST be the very first script in <head> -->
+  <script>
+    (function () {
+      const sp = new URLSearchParams(location.search);
+      if (sp.get('skipAuth') === '1') {
+        try {
+          localStorage.setItem('auth:session', JSON.stringify({user:'dev',role:'user',ts:Date.now()}));
+        } catch(e) {}
+        location.replace('/#/');
+      }
+    })();
+  </script>
     <link rel="icon" type="image/svg+xml" href="/trickster.svg" />
     <meta charset="UTF-8" />
     <meta
