--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
         try {
-          const res = await fetch('/auth/login', {
+          const res = await fetch('/api/auth/login', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ email, password }),
